--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Labyrinthe</h2>
-										<p>Projet Interdisciplinaire sur 2 ans en tant que Lead Developper</p>
+										<p>Projet Interdisciplinaire sur 2 ans <br />en tant que Lead Developper d'un groupe de 4 développeur<br/></p>
+										<p>tâches principales : procédural et gameplay</p>
 										<p>Dates : 2021-2023</p>
 									</div>
 								</div>
@@ -65,7 +66,30 @@
 								<div class="inner">
 									<h2 class="major">Projets Secondaires</h2>
 									<p>Projets de plus petites envergures</p>
+
 									<section class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic07.png" alt="" /></a>
+											<h3 class="major">IA combat de Tank type king of the hill unity</h3>
+											<p>Projet de 3 semaines </p>
+											<p>3 vs 3, une partie dure un temps donnée et l'équipe qui a contrôlé la zone centrale le plus longtemps a gagné. </p>
+											<p>Objectif :comprendre les systèmes de navigation et l'implémentation d'IA, travailler sur un projet existent. </p>
+											<p>Tâches : implémentation d'algorithme de chemin le plus court (Dijkstra, Astar) et implémentation de behaviour tree.</p>
+											<p>Équipe de 3 personnes</p>
+											<p>Dates : Janvier-Février 2022</p>
+											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic08.png" alt="" /></a>
+											<h3 class="major">Jeu Twitch Unity</h3>
+											<p>Projet de 4 semaines </p>
+											<p>Les joueurs commencent sur une case aléatoire, tous les tours choisissent un déplacement en +, tous les tours les cases sous les joueurs disparaissent.</p>
+											<p>Objectif : faire un travail SOLID, utiliser des ScriptableObject, avoir des clients externes au jeu (Twitch, Google) </p>
+											<p>Tâches : l'implémentation des patrons commandes (input local et Twitch), machine à état (boucle de jeu), observeur, stratégie (sauvegarde) </p>
+											<p>Équipe de 3 personnes</p> 
+											<p>Dates : Décembre 2021</p>
+											<a href="https://github.com/Chagror/CatGame" class="special">GitHub</a>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.png" alt="" /></a>
 											<h3 class="major">Flipper 2D Unity C# sans les composants de physique et de collisions</h3>
@@ -74,6 +98,7 @@
 											<p>Tâches : Physique et collisions </p>
 											<p>Équipe de 2 personnes</p>
 											<p>Dates : Septembre 2021</p>
+											<p>Une version 3D a aussi été réalisé avec des calculs de vecteur</p>
 											<a href="https://sathariel.itch.io/flipper-2d" class="special">Itch.io</a>
 										</article>
 										<article>
@@ -84,13 +109,13 @@
 											<p>Équipe de 2 personnes</p>
 											<p>Dates : Avril 2021</p>
 										</article>
-										
+
 										<article>
 											<a href="#" class="image"><img src="images/pic06.png" alt="" /></a>
 											<h3 class="major">Plateformer 2D en Java/JavaFx</h3>
 											<p>Projet de 3 semaines </p>
 											<p>Dates : Janvier 2019</p>
-											<p>Tâches : Déplacement/parallaxe et collisions </p>
+											<p>Tâches : Déplacement/parallaxe, collisions avec comportement </p>
 											<p>Équipe de 2 personnes </p>
 											<a href="https://github.com/FranYuu/super-waluigi-Deluxe-JavaFx/tree/master/Super%20Waluigi%20DELUXE%20Edition" class="special">GitHub</a>
 										</article>
