--- a/index.html
+++ b/index.html
@@ -64,9 +64,67 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Projets Secondaires</h2>
-									<p>Projets de plus petites envergures</p>
+									<h2 class="major">Projets GameJam Gaming Campus</h2>
+									<section class="features">
+										<article>
+											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMTc3NzE2NC8xMDQ0NjUxMy5wbmc=/original/mCDyW1.png" alt="" /></a>
+											<h3 class="major">Twilight Carnage</h3>
+											<p>Projet de 4 jours </p>
+											<p>Vampire survivor like en multijoueur dans le thème de halloween </p>
+											<p>Objectif : Apprendre la technologie Unity netcode For GameObjects </p>
+											<p>Tâches : gérer les énemies(spawn, mort, loot d'exp, déplacement, dégats,synchronsiation) , et gestion de projet</p>
+											<p>Équipe de 5 personnes</p>
+											<p>Dates : Octobre 2022</p>
+											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub A mettre</a>
+											<a href="https://fransora.itch.io/twilight-carnage" class="special">itchio</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="https://img.itch.zone/aW1nLzEwODQ5NzkyLnBuZw==/original/sT%2Bzkw.png" alt="" /></a>
+											<h3 class="major">Lutin's Karts</h3>
+											<p>Projet de 4 jours </p>
+											<p>jeu de course multijoueur dans le thème de Noël </p>
+											<p>Objectif : Approndir nos connaissances de la technologie Unity netcode For GameObjects </p>
+											<p>Tâches : déplacement du kart avec power Up et synchronisation, mini map </p>
+											<p>Équipe de 5 personnes</p>
+											<p>Dates : Décembre 2022</p>
+											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub A mettre</a>
+											<a href="https://fransora.itch.io/lutinskarts" class="special">itchio</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMTkzMDMyNi8xMTM1MDA1MC5wbmc=/original/lCvqvt.png" alt="" /></a>
+											<h3 class="major">Libérer déliverer</h3>
+											<p>Projet de 4 jours </p>
+											<p>Jeu sur la commande d'une association TUBA (association Lyon Urban Data), afin de sensibiliser aux choix de livraisons</p>
+											<p>Tâches : gestion de projet et production d'asset graphique</p>
+											<p>Équipe de 12 personnes</p>
+											<p>Dates : Février 2023</p>
+											<a href="https://sathariel.itch.io/librer-d-livrer" class="special">Itch.io</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMjA4NzU2NC8xMjI3OTY4OS5wbmc=/original/%2FjpSmQ.png" alt="" /></a>
+											<h3 class="major">Calamity Bringer</h3>
+											<p>Projet de 4 jours </p>
+											<p>On joue un géant qui peut écraser les personnes et détruires les bâtiments. </p>
+											<p>Objectif : Apprendre la technologie DOTS</p>
+											<p>Tâches : physique Dots de Destructions des batiments</p>
+											<p>Équipe de 5 personnes</p>
+											<p>Dates : Mai 2023</p>
+											<a href="https://meshanda.itch.io/calamity-bringer" class="special">Itch.io</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMjA4NzU2NC8xMjI3OTY4OS5wbmc=/original/%2FjpSmQ.png" alt="" /></a>
+											<h3 class="major">Schlag das Kind</h3>
+											<p>Projet de 3 jours </p>
+											<p>Tower defense avec tours(comportement et stat),ennemis et les vagues. </p>
+											<p>Objectif : Faire un jeu moddable</p>
+											<p>Tâches :tours avec JSOn pour modder les stats et Lua pour le comportement</p>
+											<p>Équipe de 4 personnes</p>
+											<p>Dates : Juillet 2023</p>
+											<a href="https://meshanda.itch.io/schlag-das-kind" class="special">Itch.io</a>
+										</article>
 
+									</section>
+									<h2 class="major">Projets 2021-2022</h2>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic07.png" alt="" /></a>
@@ -86,7 +144,7 @@
 											<p>Les joueurs commencent sur une case aléatoire, tous les tours choisissent un déplacement en +, tous les tours les cases sous les joueurs disparaissent.</p>
 											<p>Objectif : faire un travail SOLID, utiliser des ScriptableObject, avoir des clients externes au jeu (Twitch, Google) </p>
 											<p>Tâches : l'implémentation des patrons commandes (input local et Twitch), machine à état (boucle de jeu), observeur, stratégie (sauvegarde) </p>
-											<p>Équipe de 3 personnes</p> 
+											<p>Équipe de 3 personnes</p>
 											<p>Dates : Décembre 2021</p>
 											<a href="https://github.com/Chagror/CatGame" class="special">GitHub</a>
 										</article>
@@ -101,6 +159,11 @@
 											<p>Une version 3D a aussi été réalisé avec des calculs de vecteur</p>
 											<a href="https://sathariel.itch.io/flipper-2d" class="special">Itch.io</a>
 										</article>
+									</section>
+
+
+									<h2 class="major">Projets avant 2021-2022</h2>
+									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic05.png" alt="" /></a>
 											<h3 class="major">Jeu de Dame en réseau en C</h3>
@@ -119,7 +182,6 @@
 											<p>Équipe de 2 personnes </p>
 											<a href="https://github.com/FranYuu/super-waluigi-Deluxe-JavaFx/tree/master/Super%20Waluigi%20DELUXE%20Edition" class="special">GitHub</a>
 										</article>
-
 									</section>
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
