Smart Machines exp started to add

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
+									<a href="#" class="image"><img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/295447085_463230309100665_8477025309000753348_n.png?_nc_cat=109&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=se6bptMvkv0AX9aoBUi&_nc_ht=scontent-cdg4-2.xx&oh=00_AfAscXDHFa8Y5zi-I9VyQ2K6aO7QiksMoTCF5tqj4AlJ0Q&oe=6526CE38" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Labyrinthe</h2>
-										<p>Projet Interdisciplinaire sur 2 ans <br />en tant que Lead Developper d'un groupe de 4 développeur<br/></p>
-										<p>tâches principales : procédural et gameplay</p>
-										<p>Dates : 2021-2023</p>
+										<h2 class="major">Smart Machine</h2>
+										<p>Stage puis Alternances 15 mois </p>
+										<p><br />9 jeux et 3 prototypes de jeux casual “motion gaming” avec 4 multijoueur<br /></p>
+										<p><a href="https://www.smart-machines.net/" >https://www.smart-machines.net/</a></p>
+										<a href="SmartMachine.html" class="image">more</a>
+										<p>Dates : 2022-2023</p>
 									</div>
 								</div>
 							</section>
