added smartmachine xp and adjustement en main page

--- a/SmartMachine.html
+++ b/SmartMachine.html
@@ -56,133 +56,101 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">JVS</h2>
+									<p>
+										Jeux vidéo projeté où les impacts des ballons lancé sur le mur sont envoyé par OSC.
+									</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMTc3NzE2NC8xMDQ0NjUxMy5wbmc=/original/mCDyW1.png" alt="" /></a>
-											<h3 class="major">Twilight Carnage</h3>
-											<p>Projet de 4 jours </p>
-											<p>Vampire survivor like en multijoueur dans le thème de halloween </p>
-											<p>Objectif : Apprendre la technologie Unity netcode For GameObjects </p>
-											<p>Tâches : gérer les énemies(spawn, mort, loot d'exp, déplacement, dégats,synchronsiation) , et gestion de projet</p>
-											<p>Équipe de 5 personnes</p>
-											<p>Dates : Octobre 2022</p>
-											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub A mettre</a>
-											<a href="https://fransora.itch.io/twilight-carnage" class="special">itchio</a>
+											<a href="#" class="image"><img src="images/CrudyCrush.png" alt="" /></a>
+											<h3 class="major">Crudy Crunch</h3>
+											<p>Match 3 inspiré de crudy crunch</p>
+											<p>Objectif : premier hyper casu, beaucoup de temps pour ajouté pour le sentiment de jeu </p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://img.itch.zone/aW1nLzEwODQ5NzkyLnBuZw==/original/sT%2Bzkw.png" alt="" /></a>
-											<h3 class="major">Lutin's Karts</h3>
-											<p>Projet de 4 jours </p>
-											<p>jeu de course multijoueur dans le thème de Noël </p>
-											<p>Objectif : Approndir nos connaissances de la technologie Unity netcode For GameObjects </p>
-											<p>Tâches : déplacement du kart avec power Up et synchronisation, mini map </p>
-											<p>Équipe de 5 personnes</p>
-											<p>Dates : Décembre 2022</p>
-											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub A mettre</a>
-											<a href="https://fransora.itch.io/lutinskarts" class="special">itchio</a>
+											<a href="#" class="image"><img src="images/Quizz.png" alt="" /></a>
+											<h3 class="major">Quizz</h3>
+											<p>jeu de quizz avec images et questions provenant d'un CSV </p>
+											<p>Note : beaucoup de temps passé sur l'interface </p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMTkzMDMyNi8xMTM1MDA1MC5wbmc=/original/lCvqvt.png" alt="" /></a>
-											<h3 class="major">Libérer déliverer</h3>
-											<p>Projet de 4 jours </p>
-											<p>Jeu sur la commande d'une association TUBA (association Lyon Urban Data), afin de sensibiliser aux choix de livraisons</p>
-											<p>Tâches : gestion de projet et production d'asset graphique</p>
-											<p>Équipe de 12 personnes</p>
-											<p>Dates : Février 2023</p>
-											<a href="https://sathariel.itch.io/librer-d-livrer" class="special">Itch.io</a>
+											<a href="#" class="image"><img src="images/Puzzle.png" alt="" /></a>
+											<h3 class="major">Puzzle</h3>
+											<p>Puzzle sur une image chargé en runtime </p>
+											<p>
+												Objectif : Réaliser un puzzle sur une image donné par le client, utilisation d'un masque
+												de pièces de puzzle sur l'image pour donner l'illusion du puzzle,
+												pièce manquante choisis par une répartition aléatoire gaussienne
+											</p>
+											<p>état prototype car manque des travaux d'interfaces</p>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMjA4NzU2NC8xMjI3OTY4OS5wbmc=/original/%2FjpSmQ.png" alt="" /></a>
-											<h3 class="major">Calamity Bringer</h3>
-											<p>Projet de 4 jours </p>
-											<p>On joue un géant qui peut écraser les personnes et détruires les bâtiments. </p>
-											<p>Objectif : Apprendre la technologie DOTS</p>
-											<p>Tâches : physique Dots de Destructions des batiments</p>
-											<p>Équipe de 5 personnes</p>
-											<p>Dates : Mai 2023</p>
-											<a href="https://meshanda.itch.io/calamity-bringer" class="special">Itch.io</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="https://img.itch.zone/aW1hZ2UvMjA4NzU2NC8xMjI3OTY4OS5wbmc=/original/%2FjpSmQ.png" alt="" /></a>
-											<h3 class="major">Schlag das Kind</h3>
-											<p>Projet de 3 jours </p>
-											<p>Tower defense avec tours(comportement et stat),ennemis et les vagues. </p>
-											<p>Objectif : Faire un jeu moddable</p>
-											<p>Tâches :tours avec JSOn pour modder les stats et Lua pour le comportement</p>
-											<p>Équipe de 4 personnes</p>
-											<p>Dates : Juillet 2023</p>
-											<a href="https://meshanda.itch.io/schlag-das-kind" class="special">Itch.io</a>
-										</article>
-
 									</section>
 									<h2 class="major">VVS</h2>
+									<p>
+										Des jeux multijoueurs sur Unity avec Unity netcode for GameObject. Les jeux se jouent avec des vélos qui ont leurs donnés envoyé
+										par méssages OSC. Avec Positionnement automatique des deux fenêtre pour le local.
+									</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/Rally.jpg" alt="" /></a>
 											<h3 class="major">Eco Rally</h3>
-											<p>Projet de 3 semaines </p>
-											<p>3 vs 3, une partie dure un temps donnée et l'équipe qui a contrôlé la zone centrale le plus longtemps a gagné. </p>
-											<p>Objectif :comprendre les systèmes de navigation et l'implémentation d'IA, travailler sur un projet existent. </p>
-											<p>Tâches : implémentation d'algorithme de chemin le plus court (Dijkstra, Astar) et implémentation de behaviour tree.</p>
-											<p>Équipe de 3 personnes</p>
-											<p>Dates : Janvier-Février 2022</p>
-											<a href="https://github.com/SatharielFR/UnityProject-6-AI" class="special">GitHub</a>
+											<p>Jeu où les joueur parcours un environnement en pouvant récolter des bonus et déchets tout en passant par des points d'intéret' </p>
+											<p>Première expérience sur le multijoueur Netcode for GameObjects et tentative de simulation de vélo inspiré de hoverBoard et des jeux F-zero pour s'adapter à toutes les maps'  </p>
+											<p>Seul sur le code</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/ChasseAuCO2.jpg" alt="" /></a>
 											<h3 class="major">Chasse au CO2</h3>
-											<p>Projet de 4 semaines </p>
-											<p>Les joueurs commencent sur une case aléatoire, tous les tours choisissent un déplacement en +, tous les tours les cases sous les joueurs disparaissent.</p>
-											<p>Objectif : faire un travail SOLID, utiliser des ScriptableObject, avoir des clients externes au jeu (Twitch, Google) </p>
-											<p>Tâches : l'implémentation des patrons commandes (input local et Twitch), machine à état (boucle de jeu), observeur, stratégie (sauvegarde) </p>
-											<p>Équipe de 3 personnes</p>
-											<p>Dates : Décembre 2021</p>
-											<a href="https://github.com/Chagror/CatGame" class="special">GitHub</a>
+											<p>Les joueurs se déplacent dans plusieurs environnement et tirent sur des particules de gaz à effet de Serre </p>
+											<p>Adapter un jeu présent dans le dispositif JVS pour qu'il soit en multijoueur et avec les contôles vélo</p>
+											<p>Seul sur le code</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/IceInvader.jpg" alt="" /></a>
 											<h3 class="major">Ice invaders</h3>
-											<p>Note : sans utiliser les composants de physique et de collisions</p>
-											<p>Projet de 4 jours </p>
-											<p>Tâches : Physique et collisions </p>
-											<p>Équipe de 2 personnes</p>
-											<p>Dates : Septembre 2021</p>
-											<p>Une version 3D a aussi été réalisé avec des calculs de vecteur</p>
-											<a href="https://sathariel.itch.io/flipper-2d" class="special">Itch.io</a>
+											<p>Les joueurs pilotent un vaisseaux spatial au-dessus de la banquise pour la défendre de vaiseaux pirates</p>
+											<p>Faire les déplacement d'un vaisseau et créer une Intelligence artificiel simple mais convaincante(State machine)</p>
+											<p>Seul sur le code</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/Racing.jpg" alt="" /></a>
 											<h3 class="major">Racing</h3>
-											<p>Note : sans utiliser les composants de physique et de collisions</p>
-											<p>Projet de 4 jours </p>
-											<p>Tâches : Physique et collisions </p>
-											<p>Équipe de 2 personnes</p>
-											<p>Dates : Septembre 2021</p>
-											<p>Une version 3D a aussi été réalisé avec des calculs de vecteur</p>
-											<a href="https://sathariel.itch.io/flipper-2d" class="special">Itch.io</a>
+											<p>Les joueurs font la coursent en motos accompagné de 6 IA</p>
+											<p>Déplacement similaire à Rally mais bien plus rapide et plus arcades avec des IA simples</p>
+											<p>Seul sur le code</p>
 										</article>
 									</section>
 
 
 									<h2 class="major">HVS</h2>
+									<p>
+										Jeux vidéo projeté dans un couloir de lancé de hache où l'impact de la cible est envoyé par OSC. 
+										les fenêtres de jeux peuvent être manipulé pour s'adapter aux déformations.
+										Beacoup de temps a été passé a adapter les règles du clients.
+									</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic05.png" alt="" /></a>
-											<h3 class="major">Jeu de Dame en réseau en C</h3>
-											<p>Projet de 1 semaines </p>
-											<p>Tâches : Jeu de Dame </p>
-											<p>Équipe de 2 personnes</p>
-											<p>Dates : Avril 2021</p>
+											<a href="#" class="image"><img src="images/FlipHache.png" alt="" /></a>
+											<h3 class="major">Flip hache</h3>
+											<p>Cible interactives avec des effets spéciaux par série de 3 lancé </p>
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="images/pic06.png" alt="" /></a>
-											<h3 class="major">Plateformer 2D en Java/JavaFx</h3>
-											<p>Projet de 3 semaines </p>
-											<p>Dates : Janvier 2019</p>
-											<p>Tâches : Déplacement/parallaxe, collisions avec comportement </p>
-											<p>Équipe de 2 personnes </p>
-											<a href="https://github.com/FranYuu/super-waluigi-Deluxe-JavaFx/tree/master/Super%20Waluigi%20DELUXE%20Edition" class="special">GitHub</a>
+											<a href="#" class="image"><img src="images/H.png" alt="" /></a>
+											<h3 class="major">Simple hache</h3>
+											<p>Flip hache sans les série spéciales </p>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/Vikinvader.png" alt="" /></a>
+											<h3 class="major">Vik'invader</h3>
+											<p>Space invader avec un thème viking et des effets spécial tous les 3 lancés  </p>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/risk.png" alt="" /></a>
+											<h3 class="major">Command & Target</h3>
+											<p>L'image sert juste d'example, le jeu n'a pas de vrai visuel </p>
+											<p> Risk en lancé de hache resté à l'état de prototype, règles trop complexe en l'états</p>
 										</article>
 									</section>
 									<ul class="actions">
@@ -191,7 +159,7 @@
 								</div>
 							</section>
 
-					</section>
+					</section><button class="btn btn-primary" style="position: fixed; top: 1%; right: 5%; background-color: rgba(255, 255, 255, 0.1); " onclick="window.location.href='index.html'">&#x2302 Home</button>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
