--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
 				<h2 class="major">Projets 2021-2022</h2>
 				<section class="features">
 					<article>
+						<a href="#" class="image"><img src="images/roller.png" alt="" /></a>
+						<h3 class="major">moteur roller-coaster et jeu C++/Directx9</h3>
+						<p>Projet de 4 semaines </p>
+						<p>Objectif : réaliser un moteur et son jeu  </p>
+						<p>Tâches : création procédural du chemin et déplacement, affichage des objets et optimisation nombre de polygones</p>
+						<p>Équipe de 4 personnes</p>
+						<p>Dates : Avril-Mai 2022</p>
+						<a href="https://github.com/Meshanda/Direct8" class="special">GitHub</a>
+					</article>
+					<article>
 						<a href="#" class="image"><img src="images/pic07.png" alt="" /></a>
 						<h3 class="major">IA combat de Tank type king of the hill unity</h3>
 						<p>Projet de 3 semaines </p>
