--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<h3 class="major">moteur roller-coaster et jeu C++/Directx9</h3>
 						<p>Projet de 4 semaines </p>
 						<p>Objectif : réaliser un moteur et son jeu  </p>
-						<p>Tâches : création procédural du chemin et déplacement, affichage des objets et optimisation nombre de polygones</p>
+						<p>Tâches : création procédural du chemin et déplacement, affichage des objets et optimisation du nombre de polygones</p>
 						<p>Équipe de 4 personnes</p>
 						<p>Dates : Avril-Mai 2022</p>
 						<a href="https://github.com/Meshanda/Direct8" class="special">GitHub</a>
